2005-02-24  Alan Modra  <amodra@bigpond.net.au>

	* coffcode.h (coff_print_aux): Warning fix.
	* elf-m10300.c (mn10300_elf_relax_section): Use section->id
	instead of section pointer to identify.
	* coff-h8300.c (h8300_reloc16_extra_cases): Likewise.  Allocate
	the correct size buffer for local sym mangling too.
	(h8300_bfd_link_add_symbols): Likewise.
	* elf32-sh-symbian.c (sh_symbian_process_embedded_commands): Fix
	warning.
	* elf32-sh64.c (shmedia_prepare_reloc): Use %B and %p in error message
	* elf32-xtensa.c (literal_value_hash): Warning fix.
	* versados.c (process_otr): Warning fix.
	(versados_canonicalize_reloc): Likewise.
	* vms-gsd.c (_bfd_vms_slurp_gsd): Warning fix.
	* vms.c (fill_section_ptr): Warning fix.

2005-02-23  H.J. Lu  <hongjiu.lu@intel.com>

	* coff-tic54x.c (SWAP_OUT_RELOC_EXTRA): Defined.
	* coff-tic80.c (SWAP_OUT_RELOC_EXTRA): Likewise.

2005-02-23  Nick Clifton  <nickc@redhat.com>

	* elfxx-mips.c (mips_elf_create_dynamic_relocation): Initialise
	the relvaddr field of the Elf32_crinfo structure.

	* elf32-m68hc1x.c (elf32_m68hc11_relocate_section): Initialise
	variables that are passed by reference to
	m68hc11_get_relocation_value in case that function does not
	initialise them.

	* elf32-cr16c.c (cr16c_elf_final_link_relocate): Remove duplicated
	return statements and replace with a single return at the end of
	the function.  This helps pacify the flow analysis code in gcc 4.0.

	* elf.c (_bfd_elf_compute_section_file_positions): Initialise
	strtab to avoid compile time warning.

2005-02-23  Ben Elliston  <bje@au.ibm.com>

	* opncls.c (bfd_zalloc): Document this function.

2005-02-21  H.J. Lu  <hongjiu.lu@intel.com>

	* coffcode.h (sec_to_styp_flags): Replaced SEC_CLINK with
	SEC_TIC54X_CLINK. Replace SEC_BLOCK with SEC_TIC54X_BLOCK.
	Replace SEC_SHARED with SEC_COFF_SHARED.
	(styp_to_sec_flags): Likewise.

	* elfxx-target.h (TARGET_BIG_SYM): Remove SEC_ARCH_BIT_0.
	(TARGET_LITTLE_SYM): Likewise.

	* section.c (SEC_ARCH_BIT_0): Removed.